[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strcs"
dynamic = ["version"]
description = "Wrapper to make it more convenient to make structure hooks for cattrs"
readme = "README.rst"
license = "MIT"
requires-python = ">= 3.10"
authors = [
    { name = "Stephen Moore", email = "stephen@delfick.com" },
]
dependencies = [
    "attrs>=22.2.0",
    "cattrs>=22.2.0",
]

[project.optional-dependencies]
tests = [
    "noseOfYeti[black]==2.4.2",
    "pytest==7.2.0",
    "attrs>=23.1.0",
    "cattrs>=23.1.2",
]

[project.urls]
Homepage = "http://github.com/delfick/strcs"

[tool.hatch.version]
path = "strcs/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/strcs",
]

[tool.hatch.build]
include = ["strcs/*"]

[tool.black]
line-length = 100
include = '(\.py|^venv)$'
exclude = '''
/(
     \.git
   | \.tox
   | dist
   | tools/\.python
   | docs/_build
   | build
)/
'''

[tool.isort]
profile = "black"
skip_glob = [
   ".git/*",
   ".tox/*",
   "dist/*",
   "tools/.python/*",
   "tools/deps/*",
   "docs/_build/*",
   "build/*",
]

[tool.mypy]
plugins = 'noseOfYeti.plugins.mypy'
ignore_missing_imports = true
show_column_numbers = true
allow_redefinition = true
