[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strcs-test-driver"
dynamic = ["version"]
license = { text = "MIT" }
authors = [
    { name = "Stephen Moore", email = "stephen@delfick.com" },
]
dependencies = [
    "pytest==8.3.4",
    "alt-pytest-asyncio==0.9.1",
    "mypy==1.15.0",
]

[tool.hatch.version]
path = "strcs_test_driver/version.py"

[tool.hatch.build.targets.wheel]
include = [
    "/strcs_test_driver",
]
